2012-05-24  Tim Horton  <timothy_horton@apple.com>

        Add feature defines for web-facing parts of CSS Regions and Exclusions
        https://bugs.webkit.org/show_bug.cgi?id=87442
        <rdar://problem/10887709>

        Reviewed by Dan Bernstein.

        * features.gypi:

2012-05-24  Kent Tamura  <tkent@chromium.org>

        PAGE_POPUP: window.setValueAndClosePopup should be moved to a
        per-context property of DOMWindow.
        https://bugs.webkit.org/show_bug.cgi?id=87086

        Reviewed by Adam Barth.

        * src/WebPagePopupImpl.cpp:
        (WebKit): Add PagePopupFrameLoaderClient, which allows window.pagePopupController.
        (WebKit::WebPagePopupImpl::initPage):
         - Use PagePopupFrameLoaderClient
         - Remove the call of ScriptController::installFunctionsForPagePopup().
         - Call DOMWindowPagePopup::install() to inform m_popupClient to a
           DOMWindowPagePopup object for the DOMWindow.

2012-05-21  Kinuko Yasuda  <kinuko@chromium.org>

        Cleanup: add a file system call which captures the file metadata at once.
        https://bugs.webkit.org/show_bug.cgi?id=86995

        Reviewed by David Levin.

        * src/PlatformSupport.cpp:
        (WebCore::PlatformSupport::getFileMetadata):
        (WebCore):

2012-05-24  Hironori Bono  <hbono@chromium.org>

        Enable grammar checking on Chromium when we paste text  (Take 2)
        https://bugs.webkit.org/show_bug.cgi?id=74393

        Reviewed by Ryosuke Niwa.

        This change enables grammar checking on Chromium and implements a mock grammar
        checker to fix a failing test.

        * src/ContextMenuClientImpl.cpp:
        (WebKit::ContextMenuClientImpl::getCustomMenuFromDefaultItems): Show suggestions when we right-click grammatically-misspelled words.
        * src/EditorClientImpl.cpp:
        (WebKit::EditorClientImpl::isGrammarCheckingEnabled): Enable grammar checking when we enable asynchronous spellchecking.